@@ -32,6 +32,9 @@
 	<LI>IMG elements with links that use the ALIGN attribute
 	didn't get the links.
 
+	<LI>Header and footer comments would interfere with the
+	top and bottom margin settings.
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.19</H2>
